# Sqlit3-cpp-lib

./: CMakeLists.txt
include/: sqlite.hpp  value_proxy.hpp
src/: sqlite.cpp  value_proxy.cpp
